color improvements / consistency

--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -5,7 +5,7 @@
 
 .text-note,
 .text-light
-  color: #999999
+  color: $text-color-light
 
 .logo
   font-size: 1.5rem
@@ -27,13 +27,13 @@ a
     fill: $blue
 
   &:hover
-    color: #333333
+    color: $black-light
 
     svg
-      color: #333333
+      color: $black-light
 
 a.link-danger
   color: $red
 
   &:hover
-    color: #333333
+    color: $black-light
