--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -10,7 +10,7 @@
   background-color: $background-color-panel
 
 .panel-base
-  box-shadow: 0 0.125rem 0.5rem 1px rgba(0, 0, 0, .05), 0 0 0.125rem 1px rgba(0, 0, 0, 0.03)
+  box-shadow: 0 0.0625rem 0.625rem 0 rgba(0, 0, 0, .03), 0 0 0.125rem 1px rgba(0, 0, 0, 0.02)
   border: 0
 
 .panel-padding
@@ -23,7 +23,7 @@
   font-size: $font-size-default
   font-weight: 700
   text-transform: uppercase
-  color: #888888
+  color: $silver
 
 .panel-list
   list-style-type: none
@@ -51,7 +51,7 @@
   width: 100%
   border-top: 1px solid $border-color-dark
   border-bottom: 1px solid $border-color-light
-  background: #fafafa
+  background: $white-dark
 
   dt,
   dd
@@ -67,13 +67,13 @@
     width: 35%
     padding-left: $padding-default
     padding-right: $padding-sm
-    color: #333333
+    color: $black-light
 
   dd
     width: 65%
     padding-right: $padding-default
     padding-left: $padding-sm
-    color: #000000
+    color: $black
 
 .panel-details-link
   position: relative
@@ -81,7 +81,7 @@
   float: left
   width: 100%
 
-  background: #ffffff
+  background: $white
   border-top: 1px solid $border-color-light
 
   dt,
@@ -108,4 +108,4 @@
 
   span.description
     font-size: 0.75rem
-    color: #888888
+    color: $silver
