--- a/app/assets/stylesheets/errors.sass
+++ b/app/assets/stylesheets/errors.sass
@@ -22,13 +22,13 @@
       margin-top: 6.25rem
 
       &:hover
-        color: #333333
+        color: $black-light
 
     img
       text-shadow: 0 1px 0 $border-color-dark
 
     h2
-      color: #333333
+      color: $black-light
       margin-top: $margin-lg
       font-weight: 700
       font-size: 1rem
