--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -11,7 +11,7 @@
   line-height: $input-height - 0.125rem
   text-align: center
   cursor: pointer
-  color: #333333
+  color: $black-light
 
   border-radius: 0.125rem
   border: 0.0625rem solid $border-color-dark
@@ -90,14 +90,14 @@
   letter-spacing: none
 
   &:hover, &:active
-    color: #333333
+    color: $black-light
     box-shadow: none
 
 .btn.btn-danger-link
   color: $text-color-red
 
   &:hover, &:active,
-    color: #000000
+    color: $black
 
 .btn.btn-lg
   height: $input-height-lg
@@ -123,10 +123,10 @@
 
 .btn.btn-blue
   background: lighten($blue, 4%)
-  color: #ffffff
+  color: $white
 
 .btn.btn-blue-muted
-  background: #ffffff
+  background: $white
   color: $text-color-blue
 
 .btn.btn-blue,
@@ -136,7 +136,7 @@
   &:hover,
   &:active,
   &:focus
-    color: #ffffff
+    color: $white
     background: darken($blue, 2%)
 
   &:focus
@@ -148,11 +148,11 @@
 .btn.btn-primary
   border-color: darken($border-color-green, 3%)
   background: $green
-  color: #ffffff
+  color: $white
 
 .btn.btn-primary-muted
   border-color: darken($border-color-green, 5%)
-  background: #ffffff
+  background: $white
   color: $text-color-green
 
 .btn.btn-primary,
@@ -160,7 +160,7 @@
   &:hover,
   &:active,
   &:focus
-    color: #ffffff
+    color: $white
     background: darken($green, 3%)
 
   &:focus
@@ -172,7 +172,7 @@
 .btn.btn-warning
   border-color: darken($border-color-yellow, 5%)
   background: lighten($yellow, 4%)
-  color: #ffffff
+  color: $white
 
   &:hover, &:active
     background: darken($yellow, 1%)
@@ -187,7 +187,7 @@
 .btn.btn-danger
   background: darken($red, 5%)
   border-color: darken($border-color-red, 5%)
-  color: #ffffff
+  color: $white
 
 .btn.btn-danger-muted
   color: $text-color-red
@@ -199,7 +199,7 @@
   &:focus
     border-color: darken($border-color-red, 5%)
     background: darken($red, 10%)
-    color: #ffffff
+    color: $white
 
   &:focus
     box-shadow: 0 0 0.1875rem 0 $border-color-red
