--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -1,10 +1,22 @@
-$red: #f73b47
-$yellow: #eabb28
-$green: #1aca82
-$blue: #03a9f4
-$purple: #a82c7c
+$red: #ff4949
+$yellow: #f7ba2a
+$green: #13ce66
+$blue-light: #f8b7ff
+$blue: #20a0ff
+$blue-dark: #1d8ce0
+$purple: #7795f8
 
-$default-gray: #efefef
+$black: #1f2d3d
+$black-light: #324057
+$black-ex-light: #475669
+$silver: #8492A6
+$silver-light: #99A9bf
+$silver-ex-light: #c0ccda
+$gray: #d3dce6
+$gray-light: #e5e9f2
+$gray-ex-light: #eff2f7
+$white-dark: #f9fafc
+$white: #ffffff
 
 // TEXT COLORS
 $text-color-red: darken($red, 20%)
@@ -13,22 +25,22 @@ $text-color-green: darken($green, 10%)
 $text-color-blue: darken($blue, 20%)
 $text-color-dark-blue: #182433
 
-$text-color-default: #333333
-$text-color-light: #999999
+$text-color-default: $black-light
+$text-color-light: $silver-light
 $text-color-placeholder: #bbbbbb
 
 // BACKGROUND COLOR
 $background-color-red: lighten($red, 38.5%)
-$background-color-yellow: lighten($yellow, 44.25%)
+$background-color-yellow: lighten($yellow, 41%)
 $background-color-green: lighten($green, 47%)
 $background-color-blue: lighten($blue, 44%)
 
-$background-color-page: #ffffff
+$background-color-page: $white
 $background-color-footer: #0d051a
-$background-color-panel: #ffffff
-$background-color-app: #f7f7f8
+$background-color-panel: $white
+$background-color-app: #f5f7f9
 $background-color-header: #f5f5f5
-$background-color-input: #ffffff
+$background-color-input: $white
 $background-color-input-contrast: #f5f5f5
 
 // BORDER COLOR
@@ -37,8 +49,8 @@ $border-color-yellow: darken($yellow, 5%)
 $border-color-green: darken($green, 5%)
 $border-color-blue: $blue
 
-$border-color-dark: #d9d9d9
-$border-color-panel: #e9e9e9
-$border-color-light: #eeeeee
+$border-color-dark: $gray
+$border-color-panel: $gray-light
+$border-color-light: $gray-ex-light
 $border-color-input: #dfdfdf
 $border-color-input-contrast: #dedede
