--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -41,7 +41,7 @@ $background-color-panel: $white
 $background-color-app: #f5f7f9
 $background-color-header: #f5f5f5
 $background-color-input: $white
-$background-color-input-disabled: #f8f8f8
+$background-color-input-disabled: $background-color-app
 $background-color-input-contrast: #f5f5f5
 
 // BORDER COLOR
