basic css improvements

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -3,6 +3,7 @@ $input-margin-x: $margin-ex-sm/2
 
 .form-container
   width: 100%
+  float: left
 
   margin: 0 auto
 
@@ -94,7 +95,7 @@ h6.input-label
   font-size: 0.75rem
   font-family: "Hack"
   font-weight: 400
-  color: #000000
+  color: $black
 
   &::-webkit-input-placeholder,
   &::-input-placeholder,
