--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -42,7 +42,7 @@ $background-color-app: #f5f7f9
 $background-color-header: #f5f5f5
 $background-color-input: $white
 $background-color-input-disabled: $background-color-app
-$background-color-input-contrast: #f5f5f5
+$background-color-input-contrast: #f7f8f9
 
 // BORDER COLOR
 $border-color-red: darken($red, 15%)
@@ -54,4 +54,4 @@ $border-color-dark: $gray
 $border-color-panel: $gray-light
 $border-color-light: $gray-ex-light
 $border-color-input: #dfdfdf
-$border-color-input-contrast: #dedede
+$border-color-input-contrast: #e7eaee
