--- a/app/assets/stylesheets/modules/rental_invoice.sass
+++ b/app/assets/stylesheets/modules/rental_invoice.sass
@@ -5,6 +5,7 @@
   h4
     float: left
     width: 100%
+    font-weight: 400
     border-bottom: 0.0625rem solid $border-color-dark
     padding-bottom: $padding-sm
 
