--- a/app/assets/stylesheets/public/landing.sass
+++ b/app/assets/stylesheets/public/landing.sass
@@ -31,7 +31,7 @@
 
       font-size: 1.125rem
       line-height: 1.5rem
-      color: #606060
+      color: $black-light
 
 #billboard-reservation
   margin: 0 auto
