--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -39,73 +39,10 @@
   h2
     margin: 0
     float: left
+    font-size: 1.25rem
+    font-weight: 400
 
   h2,
   .flex-element
     flex: 1
     align-self: center
-
-.panel-main-details
-  margin: 0
-  float: left
-  width: 100%
-  border-top: 1px solid $border-color-dark
-  border-bottom: 1px solid $border-color-light
-  background: $white-dark
-
-  dt,
-  dd
-    float: left
-    padding-top: $padding-sm
-    padding-bottom: $padding-sm
-
-    border-top: 1px solid $border-color-light
-
-    font-size: $font-size-default
-
-  dt
-    width: 35%
-    padding-left: $padding-default
-    padding-right: $padding-sm
-    color: $black-light
-
-  dd
-    width: 65%
-    padding-right: $padding-default
-    padding-left: $padding-sm
-    color: $black
-
-.panel-details-link
-  position: relative
-  margin: 0
-  float: left
-  width: 100%
-
-  background: $white
-  border-top: 1px solid $border-color-light
-
-  dt,
-  dd
-    width: 100%
-    border-top: 0
-    padding-left: $padding-default
-    padding-right: $padding-default
-
-  dt
-    padding-bottom: $padding-ex-sm
-
-  dd
-    padding-top: $padding-ex-sm
-
-  svg
-    position: absolute
-    top: 50%
-    right: $padding-default
-    margin-top: -0.375rem
-
-    height: 0.75rem
-    width: 0.75rem
-
-  span.description
-    font-size: 0.75rem
-    color: $silver
