--- a/app/frontend/styles/global/colors.styl
+++ b/app/frontend/styles/global/colors.styl
@@ -1,3 +1,4 @@
+//  COLORS
 $red             = #ff4949
 $yellow          = #f7ba2a
 $green           = #13ce66
@@ -41,7 +42,8 @@ $background-color-panel          = $white
 $background-color-app            = #f7f7f8
 $background-color-header         = #f5f5f5
 $background-color-input          = $white
-$background-color-input-contrast = #f5f5f5
+$background-color-input-disabled = $background-color-app
+$background-color-input-contrast = #f7f8f9
 
 // BORDER COLOR
 $border-color-red            = darken($red, 15%)
@@ -53,4 +55,4 @@ $border-color-dark           = #d9d9d9
 $border-color-panel          = #e9e9e9
 $border-color-light          = #eeeeee
 $border-color-input          = #dfdfdf
-$border-color-input-contrast = #dedede
+$border-color-input-contrast = #e7eaee
