close drop off created

--- a/app/assets/stylesheets/global/_layout.sass
+++ b/app/assets/stylesheets/global/_layout.sass
@@ -18,3 +18,5 @@ $padding-ex-sm: $margin-ex-sm
 $input-height: 2.125rem
 $input-height-sm: 1.75rem
 $input-height-lg: 2.5rem
+$input-padding-y: $padding-ex-sm/2
+$input-margin-x: $margin-ex-sm/2
