--- a/app/frontend/styles/components/panels/form.styl
+++ b/app/frontend/styles/components/panels/form.styl
@@ -11,6 +11,9 @@
   float: left
   margin: 0 auto
 
+.panel-form-padding
+  padding: 0 $padding-default
+
 .panel-form-header.panel-form-header-first
   margin-top: 0
 
@@ -27,4 +30,6 @@
   width: 100%
   float: left
   margin: $padding-default 0 $padding-sm
+  padding-left: $input-margin-x
+  padding-right: $input-margin-x
   font-weight: 400
