close popup now working

--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -35,5 +35,11 @@ a
 a.link-danger
   color: $red
 
+  svg
+    fill: $red
+
   &:hover
     color: $black-light
+
+    svg
+      color: $black-light
