date time component set

--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -70,10 +70,12 @@
     margin: ($input-height - 1.25rem - 0.125rem)/2
 
 .btn.btn-icon.btn-sm
+  padding: 0
+
   svg
     height: 1rem
-    weight: 1rem
-    margin: ($input-height-sm - 1rem - 0.125rem)/2
+    width: 1rem
+    margin: ($input-height-sm - 1rem)/2
 
 .btn.btn-link
   height: auto
