calendar design updated

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -202,6 +202,7 @@ input.input-range
   color: $text-color-red
   border-color: $border-color-red
   background-color: $white
+  box-shadow: 0 0 0 0
 
 .input-field.input-field-error:focus,
 .input-field-error .input-field:focus,
