public reservation working

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -119,9 +119,11 @@ h6.input-label
   background-color: $white
   box-shadow: 0 0 0 0.0625rem lighten($blue, 30%)
 
-.input-field.input-lg
+.input-field.input-lg,
+.input-lg .input-field
   height: $input-height-lg
   font-size: $font-size-default
+
 
 .input-field,
 .input-range,
