--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -113,17 +113,24 @@ h6.input-label
 
 .input-field:focus,
 .input-field.focus,
-.StripeElement--focus
+.StripeElement--focus,
+.input-field.input-contrast:focus,
+.input-contrast .input-field:focus,
+.input-contrast .input-field.focus
   z-index: 2
   border-color: $blue
   background-color: $white
   box-shadow: 0 0 0 0.0625rem lighten($blue, 30%)
 
+.input-field.input-contrast,
+.input-contrast .input-field
+  border-color: $border-color-input-contrast
+  background-color: $background-color-input-contrast
+
 .input-field.input-lg,
 .input-lg .input-field
   height: $input-height-lg
   font-size: $font-size-default
-
 
 .input-field,
 .input-range,
@@ -194,13 +201,11 @@ input.input-range
 
     -webkit-appearance: none
 
-.input-contrast
-  border-color: $border-color-input-contrast
-  background-color: $background-color-input-contrast
-
 .input-field.input-field-error,
 .input-field-error .input-field,
-.StripeElement--invalid
+.StripeElement--invalid,
+.input-field.input-field-error.input-contrast,
+.input-contrast .input-field.input-field-error
   color: $text-color-red
   border-color: $border-color-red
   background-color: $white
@@ -208,7 +213,10 @@ input.input-range
 
 .input-field.input-field-error:focus,
 .input-field-error .input-field:focus,
-.StripeElement--invalid.StripeElement--focus
+.StripeElement--invalid.StripeElement--focus,
+.input-field.input-field-error.input-contrast:focus,
+.input-contrast .input-field.input-field-error:focus,
+.input-contrast .input-field.input-field-error.focus
   border-color: $border-color-red
   box-shadow: 0 0 0 0.0625rem lighten($red, 23%)
 
