minor updates to landing page and credit card transaction

--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -13,12 +13,6 @@
   #fleet.landing-page-section
     h4.margin-bottom-sm Our Fleet
     p Our fleet of Toyota Corollas come with RoadSide Assistance, back-up camera, brake assist, bluetooth, and USB and axuiliary inputs for a safe and comfortable trip.
-    p#todays-rate
-      b
-        | Today's Rate:&nbsp;
-        span $34
-        | &nbsp;/ day
-
     = image_tag('toyota_corolla.png', name: 'GimmeCar Rental Fleet')
 
   #faq.landing-page-section
@@ -29,6 +23,9 @@
 
       dt Do you accept debit card or cash?
       dd Unfortunately, we do not. We ONLY accept credit cards.
+
+      dt Is insurance required?
+      dd Yes! You will need both liability and collision converage with your insurance provider.
 
       dt Whats the minimum age required?
       dd You need to be atleast 25 years of age to rent a car.
