--- a/app/views/layouts/public.slim
+++ b/app/views/layouts/public.slim
@@ -17,9 +17,8 @@ html
 
         nav
           ul
-            li 909-810-8639
             li
-              button.btn.btn-primary Reserve
+              a.btn.btn-blue.btn-sm(href="tel:9093180450") 909-318-0450
 
     #landing
       == yield
