--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -1,11 +1,22 @@
 @import "global/colors"
 
+.text-danger
+  color: $text-color-red
+
+svg.text-danger
+  fill: $text-color-red
+
 .text-warning
   color: $text-color-yellow
 
 .text-note,
 .text-light
   color: $text-color-light
+
+.text-success
+  color: $text-color-green
+svg.text-success
+  fill: $text-color-green
 
 .logo
   font-size: 1.5rem
