landing page design change

--- a/app/assets/stylesheets/components/_footer.sass
+++ b/app/assets/stylesheets/components/_footer.sass
@@ -4,10 +4,9 @@
 
 footer
   width: 100%
-  background: $background-color-footer
-  color: #eaeaea
 
 #footer-content
+  border-top: 2px solid $border-color-dark
   padding: $padding-lg 0
 
   h4
@@ -28,7 +27,8 @@ footer
     margin: 0
 
 #footer-copyright
-  margin: $margin-default 0
+  border-top: 1px solid $border-color-panel
+  padding: $margin-default 0
 
   > *
     margin: $margin-default 0
