--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -1,13 +1,14 @@
 #billboard
-  .container
-    h2 Hassle Free Car Rental.
-    p
-      | 24-7 Car Rental. Currently serving&nbsp;
-      b Redlands, Loma Linda, Highland,&nbsp;
-      | and&nbsp;
-      b San Bernardino.
+  #billboard-content
+    .container
+      h2 Hassle Free Car Rental.
+      p
+        | 24-7 Car Rental. Currently serving&nbsp;
+        b Redlands, Loma Linda, Highland,&nbsp;
+        | and&nbsp;
+        b San Bernardino.
 
-    #billboard-reservation
+      #billboard-reservation
 
 .container
   #fleet.landing-page-section
