--- a/app/assets/stylesheets/public/landing.sass
+++ b/app/assets/stylesheets/public/landing.sass
@@ -5,24 +5,31 @@
 @import "nav"
 
 #landing
-  max-width: 100rem
   margin: 0 auto
 
 #billboard
   width: 100%
-  max-width: 40rem
   padding: $margin-ex-lg 0
   margin: 0 auto
 
+  background: $background-color-app
+  border-top: 1px solid $border-color-light
+  border-bottom: 1px solid $border-color-light
+
   text-align: left
+
+  #billboard-content
+    width: 100%
+    max-width: 40rem
+    margin: 0 auto
 
   h2
     margin: 0 auto $margin-ex-sm
-    padding: $padding-ex-sm 0
 
-    font-size: 3.5rem
+    font-size: 3.25rem
     font-weight: 400
     letter-spacing: -0.03125rem
+    color: $black
 
     + p
       margin-top: 0rem
@@ -56,6 +63,7 @@
   color: darken(#ffd856, 15%)
 
 #fleet
+  margin-top: $margin-lg
   width: 100%
 
   h4
