close rental completed

--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -28,11 +28,15 @@ svg.text-success
     font-size: 55%
     font-weight: 400
 
-a
+a,
+button.link
   cursor: pointer
   color: $blue
   text-decoration: none
   outline: 0
+  text-align: left
+  border: 0
+  background: rgba(0, 0, 0, 0)
 
   svg
     fill: $blue
