reservation email changed

--- a/app/views/public/emails/customer.slim
+++ b/app/views/public/emails/customer.slim
@@ -4,7 +4,7 @@
 = "Thank you for making reservation with us. Your confirmation number is #{@email.fetch(:confirmation_number)} for your rental from #{format_date_time(@email.fetch(:pickup))} to #{format_date_time(@email.fetch(:drop_off))}."
 <br/>
 <br/>
-= "If you have any questions, please feel free to reach out at (909) 318-0450 or samay@gimmecar.com."
+= "To save time at pickup, please have your drivers license, insurance policy card, and credit card ready. If you have any questions, please feel free to reach out at (909) 318-0450 or samay@gimmecar.com."
 <br/>
 <br/>
 = "*****"
