--- a/app/views/public/emails/samay.slim
+++ b/app/views/public/emails/samay.slim
@@ -8,6 +8,8 @@
 = "Email: #{@email.fetch(:email)}"
 <br/>
 = "#: #{@email.fetch(:phone_number)}"
+<br>
+= "#: #{@email.fetch(:vehicle_type)}"
 <br/>
 = "Pickup: #{format_date_time(@email.fetch(:pickup))}"
 <br/>
