web app creation

--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -4,7 +4,11 @@ html#bg-app
     title GimmeCar
     = stylesheet_link_tag 'application', :media => 'all'
     = stylesheet_link_tag 'admin'
-    meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
+    meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0')
+    meta(name='apple-touch-icon' content='apple-touch-icon.png')
+    meta(name='apple-mobile-web-app-title' content='GimmeCar')
+    meta(name='apple-mobile-web-app-capable' content='yes')
+    meta(name='apple-mobile-web-app-status-bar-style' content='black')
     link(href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet')
     link(href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css' rel='stylesheet')
 
