mobile web app status bar color change

--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -8,7 +8,13 @@ html#bg-app
     meta(name='apple-touch-icon' content='apple-touch-icon.png')
     meta(name='apple-mobile-web-app-title' content='GimmeCar')
     meta(name='apple-mobile-web-app-capable' content='yes')
-    meta(name='apple-mobile-web-app-status-bar-style' content='black')
+
+    <!-- Chrome, Firefox OS and Opera -->
+    meta(name='theme-color' content='#f7f7f8'>
+    <!-- Windows Phone -->
+    meta(name='msapplication-navbutton-color' content='#f7f7f8')
+    <!-- iOS Safari -->
+    meta(name='apple-mobile-web-app-status-bar-style' content='#f7f7f8')
     link(href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet')
     link(href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css' rel='stylesheet')
 
