--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -10,7 +10,7 @@ html#bg-app
     meta(name='apple-mobile-web-app-capable' content='yes')
 
     <!-- Chrome, Firefox OS and Opera -->
-    meta(name='theme-color' content='#f7f7f8'>
+    meta(name='theme-color' content='#f7f7f8')
     <!-- Windows Phone -->
     meta(name='msapplication-navbutton-color' content='#f7f7f8')
     <!-- iOS Safari -->
