basic rates page

--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -18,6 +18,9 @@ svg.text-danger
 svg.text-success
   fill: $text-color-green
 
+.text-right
+  text-align: right
+
 .logo
   font-size: 1.5rem
   font-weight: 900
