updates to rates popup

--- a/app/assets/stylesheets/components/_table.sass
+++ b/app/assets/stylesheets/components/_table.sass
@@ -30,7 +30,6 @@
       background: $background-color-panel
       border-top: 1px solid $border-color-light
       border-bottom: 1px solid $border-color-light
-      cursor: pointer
 
       vertical-align: middle
       color: $black-light
@@ -38,7 +37,8 @@
       &:hover
         color: $black
 
-    tr.clickable
+    .clickable
+      cursor: pointer
 
     tr.selected
       font-weight: 600
