--- a/app/frontend/styles/components/panels/details.styl
+++ b/app/frontend/styles/components/panels/details.styl
@@ -2,23 +2,33 @@
 @import '~Styles/global/layout'
 @import '~Styles/global/type'
 
+.panel-main-details,
+.panel-details-link
+  border-bottom: 1px solid $border-color-light
+
+  dt,
+  dd
+    padding-top: $padding-sm
+    padding-bottom: $padding-sm
+
+    font-size: $font-size-default
+
+  dt
+    color: $black-light
+
+  dd
+    color: $black
+
 .panel-main-details
   margin: 0
   float: left
   width: 100%
-  border-top: 1px solid $border-color-dark
-  border-bottom: 1px solid $border-color-light
   background: $white-dark
 
   dt,
   dd
     float: left
-    padding-top: $padding-sm
-    padding-bottom: $padding-sm
-
     border-top: 1px solid $border-color-light
-
-    font-size: $font-size-default
 
   dt
     width: 35%
@@ -39,7 +49,6 @@
   width: 100%
 
   background: $white
-  border-top: 1px solid $border-color-light
 
   dt,
   dd
