--- a/app/frontend/styles/global/colors.styl
+++ b/app/frontend/styles/global/colors.styl
@@ -39,7 +39,7 @@ $background-color-blue           = lighten($blue, 44%)
 $background-color-page           = $white
 $background-color-footer         = #0d051a
 $background-color-panel          = $white
-$background-color-app            = #f5f7f9
+$background-color-app            = #f9fbfc
 $background-color-header         = #f5f5f5
 $background-color-input          = $white
 $background-color-input-disabled = $background-color-app
