minor updates to public page

--- a/app/frontend/styles/global/colors.styl
+++ b/app/frontend/styles/global/colors.styl
@@ -5,7 +5,8 @@ $green           = #13ce66
 $blue-light      = #f8b7ff
 $blue            = #20a0ff
 $blue-dark       = #1d8ce0
-$purple          = #7795f8
+$purple-light    = #7795f8
+$purple          = #2645da
 
 $black           = #1f2d3d
 $black-light     = #324057
