--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -20,15 +20,15 @@
     h4 Here's a few answers to our most common questions
     dl
       dt What kinds of credentials will I need to rent a car?
-      dd You must have a valid U.S. driver's license in the driver's name and picture, a Visa, Master, Discover, or American Express credit card, and auto insurance.
+      dd You must have a valid U.S. driver's license with the driver's name and picture, a major credit card, and full coverage insurance that transfers over to the rental vehicle.
 
       dt Do you accept debit card or cash?
       dd Unfortunately, we do not. We ONLY accept credit cards.
 
       dt Is insurance required?
-      dd Yes! You will need both liability and collision converage with your insurance provider.
+      dd Yes! You will need both liability and collision coverage that transfers over to a rental vehicle.
 
       dt Whats the minimum age required?
-      dd You need to be atleast 25 years of age to rent a car.
+      dd You need to be at least 25 years of age to rent a car.
 
 = javascript_pack_tag 'public'
