minor design changes

--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -34,7 +34,7 @@ svg.text-success
 a,
 button.link
   cursor: pointer
-  color: $blue
+  color: $purple
   text-decoration: none
   outline: 0
   text-align: left
@@ -42,7 +42,7 @@ button.link
   background: rgba(0, 0, 0, 0)
 
   svg
-    fill: $blue
+    fill: $purple
 
   &:hover
     color: $black-light
