--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -85,7 +85,7 @@
   border: 0
   background: none
 
-  color: $blue
+  color: $purple
   text-transform: none
   font-size: 0.75rem
   line-height: inherit
@@ -123,23 +123,23 @@
   [class^="icon-"]:before
     font-size: 0.8125rem
 
-.btn.btn-blue
-  background: lighten($blue, 4%)
+.btn.btn-purple
+  background: lighten($purple, 4%)
   color: $white
 
-.btn.btn-blue-muted
+.btn.btn-purple-muted
   background: $white
   color: $text-color-blue
 
-.btn.btn-blue,
-.btn.btn-blue-muted
+.btn.btn-purple,
+.btn.btn-purple-muted
   border-color: darken($border-color-blue, 15%)
 
   &:hover,
   &:active,
   &:focus
     color: $white
-    background: darken($blue, 2%)
+    background: darken($purple, 2%)
 
   &:focus
     box-shadow: 0 0 0.1875rem 0 darken($border-color-blue, 15%)
