--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -14,7 +14,7 @@
     display: block
     margin-bottom: $padding-default
 
-    background: $blue
+    background: $purple
 
 
 .form-header
@@ -60,7 +60,7 @@
   padding-right: $input-padding-y
   margin: 0
 
-  font-size: 0.75rem
+  font-size: 0.8125rem
   font-weight: 700
   line-height: 1.25rem
   text-align: left
@@ -118,9 +118,9 @@ h6.input-label
 .input-contrast .input-field:focus,
 .input-contrast .input-field.focus
   z-index: 2
-  border-color: $blue
+  border-color: $purple
   background-color: $white
-  box-shadow: 0 0 0 0.0625rem lighten($blue, 30%)
+  box-shadow: 0 0 0 0.125rem lighten($purple, 30%)
 
 .input-field.input-contrast,
 .input-contrast .input-field
@@ -167,8 +167,8 @@ input[type=checkbox].input-field
     box-shadow: none
 
   &:checked
-    border-color: $blue
-    background-color: $blue
+    border-color: $purple
+    background-color: $purple
 
 input.input-range
   width: 100%
@@ -179,8 +179,8 @@ input.input-range
     outline: none
 
     &::-webkit-slider-thumb
-      border-color: $blue
-      box-shadow: 0 0 0.125rem 0 lighten($blue, 20%)
+      border-color: $purple
+      box-shadow: 0 0 0.125rem 0 lighten($purple, 20%)
 
   &::-webkit-slider-runnable-track
     width: 100%
