--- a/app/assets/stylesheets/components/_table.sass
+++ b/app/assets/stylesheets/components/_table.sass
@@ -68,7 +68,7 @@
   tr.selected .button-checkbox,
   .button-checkbox.selected
     border: 0.25rem solid $border-color-blue
-    background: $blue
+    background: $purple
 
 .panel-table.panel-table-key-pair
   table-layout: fixed
