--- a/app/views/layouts/public.slim
+++ b/app/views/layouts/public.slim
@@ -18,7 +18,7 @@ html
         nav
           ul
             li
-              a.btn.btn-blue.btn-sm(href="tel:9093180450") 909-318-0450
+              a.btn.btn-purple.btn-sm(href="tel:9093180450") 909-318-0450
 
     #landing
       == yield
