--- a/app/frontend/styles/components/panels/form.styl
+++ b/app/frontend/styles/components/panels/form.styl
@@ -24,7 +24,7 @@
     display: block
     margin-bottom: $padding-default
 
-    background: $blue
+    background: $purple
 
 .panel-form-header
   width: 100%
