--- a/app/frontend/styles/global/colors.styl
+++ b/app/frontend/styles/global/colors.styl
@@ -1,12 +1,12 @@
-//  COLORS
 $red             = #ff4949
 $yellow          = #f7ba2a
-$green           = #13ce66
+$green           = #28c46a
 $blue-light      = #f8b7ff
 $blue            = #20a0ff
 $blue-dark       = #1d8ce0
 $purple-light    = #7795f8
-$purple          = #2645da
+$purple          = #476af7
+$purple-dark     = #2645da
 
 $black           = #1f2d3d
 $black-light     = #324057
@@ -40,7 +40,7 @@ $background-color-blue           = lighten($blue, 44%)
 $background-color-page           = $white
 $background-color-footer         = #0d051a
 $background-color-panel          = $white
-$background-color-app            = #f9fbfc
+$background-color-app            = #f9f9fc
 $background-color-header         = #f5f5f5
 $background-color-input          = $white
 $background-color-input-disabled = $background-color-app
@@ -52,8 +52,8 @@ $border-color-yellow         = darken($yellow, 5%)
 $border-color-green          = darken($green, 5%)
 $border-color-blue           = $blue
 
-$border-color-dark           = #d9d9d9
-$border-color-panel          = #e9e9e9
-$border-color-light          = #eeeeee
+$border-color-dark           = $gray
+$border-color-panel          = $gray-light
+$border-color-light          = $gray-ex-light
 $border-color-input          = #dfdfdf
 $border-color-input-contrast = #e7eaee
