--- a/app/views/public/emails/samay.slim
+++ b/app/views/public/emails/samay.slim
@@ -3,7 +3,7 @@
 <br/>
 = "Confirmation #: #{@email.fetch(:confirmation_number)}"
 <br/>
-= "Name: #{@email.fetch(:first_name)} #{@email.fetch(:last_name)}"
+= "Name: #{@email.fetch(:name_first)} #{@email.fetch(:name_last)}"
 <br/>
 = "Email: #{@email.fetch(:email)}"
 <br/>
