--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -10,7 +10,7 @@
   background-color: $background-color-panel
 
 .panel-base
-  box-shadow: 0 0.0625rem 0.625rem 0 rgba(0, 0, 0, .03), 0 0 0.125rem 1px rgba(0, 0, 0, 0.02)
+  box-shadow: 0 0.25rem 1rem 0 rgba(0, 0, 0, 0.03), 0 0 0.5rem 0.0625rem rgba(0, 0, 0, 0.02), 0 0.0625rem 0.0625rem 0 rgba(0, 0, 0, 0.02)
   border: 0
 
 .panel-padding
