popup design update, minor design bugs fixed

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -173,7 +173,7 @@ input[type=checkbox].input-field
 input.input-range
   width: 100%
   float: left
-  margin: ($input-height/2 - 0.25rem + $input-margin-x) 0 $input-margin-x 0
+  margin: ($input-height/2 - 0.25rem + $input-margin-x) 0
 
   &:focus
     outline: none
