--- a/app/assets/stylesheets/components/_table.sass
+++ b/app/assets/stylesheets/components/_table.sass
@@ -67,7 +67,7 @@
 
   tr.selected .button-checkbox,
   .button-checkbox.selected
-    border: 0.25rem solid $border-color-blue
+    border: 0.25rem solid $purple
     background: $purple
 
 .panel-table.panel-table-key-pair
