index page info updated

--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -1,10 +1,10 @@
 #billboard
   #billboard-content
     .container
-      h2 Hassle Free Car Rental.
+      h2 24 / 7 Car Rental.
       p
-        | 24-7 Car Rental. Currently serving&nbsp;
-        b Redlands, Loma Linda, Highland,&nbsp;
+        | Currently serving&nbsp;
+        b Redlands, Loma Linda, Yucaipa, Highland,&nbsp;
         | and&nbsp;
         b San Bernardino.
 
@@ -19,16 +19,22 @@
   #faq.landing-page-section
     h4 Here's a few answers to our most common questions
     dl
-      dt What kinds of credentials will I need to rent a car?
-      dd You must have a valid U.S. driver's license with the driver's name and picture, a major credit card, and full coverage insurance that transfers over to the rental vehicle.
+      dt What kind of credentials will I need to rent a car?
+      dd You must have three requirements: a driver over the age of 25 with a valid U.S. driver's license with the name and picture, a credit card or debit card from a major national bank, and full coverage insurance - liability and collision - that transfers over to the rental vehicle.
 
-      dt Do you accept debit card or cash?
-      dd Unfortunately, we do not. We ONLY accept credit cards.
+      dt Do you accept cash or prepaid cards?
+      dd Unfortunately, we do not. We ONLY accept credit cards or debit cards from major national banks.
+
+      dt How much is the deposit?
+      dd We hold a $100 deposit.
 
       dt Is insurance required?
       dd Yes! You will need both liability and collision coverage that transfers over to a rental vehicle.
 
       dt Whats the minimum age required?
-      dd You need to be at least 25 years of age to rent a car.
+      dd You need to be at least 25 years of age to rent a vehicle.
+
+      dt Do you sell insurance?
+      dd Yes, we provide collision protection through a 3rd party (allianz.com), but you must provide liability insurance.
 
 = javascript_pack_tag 'public'
