minor language changes to public index

--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -17,10 +17,10 @@
     = image_tag('toyota_corolla.png', name: 'GimmeCar Rental Fleet')
 
   #faq.landing-page-section
-    h4 Here's a few answers to our most common questions
+    h4 Here are few answers to our most common questions
     dl
-      dt What kind of credentials will I need to rent a car?
-      dd You must have three requirements: a driver over the age of 25 with a valid U.S. driver's license with the name and picture, a credit card or debit card from a major national bank, and full coverage insurance - liability and collision - that transfers over to the rental vehicle.
+      dt What are your requirements to rent a vehicle?
+      dd You must meet all three requirements: a driver over the age of 25 with a valid U.S. driver's license, a credit card or debit card from a major national bank, and full coverage insurance - liability and collision - that transfers over to the rental vehicle.
 
       dt Do you accept cash or prepaid cards?
       dd Unfortunately, we do not. We ONLY accept credit cards or debit cards from major national banks.
