adelanto location added to public page

--- a/app/views/layouts/public.slim
+++ b/app/views/layouts/public.slim
@@ -29,7 +29,11 @@ html
           .one-half
             h4 Locations
             dl
-              dt Super 8 - Redlands
+              dt Adelanto, CA - California Inn
+              dd 11628 Bartlett Ave.
+              dd Adelanto, CA 92301
+            dl
+              dt Redlands, CA - Super 8
               dd 1160 Arizona St.
               dd Redlands, CA 92374
 
