--- a/app/views/admin/location.slim
+++ b/app/views/admin/location.slim
@@ -1,5 +1,11 @@
-javascript:
-  const LOCATION_NAME = "#{location.name}";
+
+- if @location
+  javascript:
+    var LOCATION_NAME = "#{@location.name}";
+
+- else
+  javascript:
+    var LOCATION_NAME = null;
 
 script(src='https://js.stripe.com/v3/')
 
