update to locations on website

--- a/app/views/layouts/public.slim
+++ b/app/views/layouts/public.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title GimmeCar - Redlands Car Rental
+    title GimmeCar - 24 / 7 Car Rental
     = stylesheet_link_tag 'application', :media => 'all'
     = stylesheet_link_tag 'public/landing'
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
