--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -4,9 +4,9 @@
       h2 24 / 7 Car Rental.
       p
         | Currently serving&nbsp;
-        b Redlands, Loma Linda, Yucaipa, Highland,&nbsp;
+        b Redlands, Loma Linda, Yucaipa, Highland, Adelanto,&nbsp;
         | and&nbsp;
-        b San Bernardino.
+        b Victorville.
 
       #billboard-reservation
 
