signature pad validation

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -202,6 +202,7 @@ input.input-range
     -webkit-appearance: none
 
 .input-field.input-field-error,
+.input-field-error .input-signature,
 .input-field-error .input-field,
 .StripeElement--invalid,
 .input-field.input-field-error.input-contrast,
