signature pad update

--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -20,6 +20,6 @@ html#bg-app
 
     = csrf_meta_tag
 
-    body
-      #gimmecar-app
-      == yield
+  body(lang='en')
+    #gimmecar-app
+    == yield
