location description added to email

--- a/app/views/public/emails/samay.slim
+++ b/app/views/public/emails/samay.slim
@@ -11,7 +11,7 @@
 <br>
 = "Vehicle Type: #{@email.fetch(:vehicle_type)}"
 <br>
-= "Location: #{@email.fetch(:vehicle_type)}"
+= "Location: #{@email.fetch(:location)}"
 <br/>
 = "Pickup: #{format_date_time(@email.fetch(:pickup))}"
 <br/>
