command rentals added

--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -4,7 +4,7 @@
       h2 24 / 7 Car Rental.
       p
         | Currently serving&nbsp;
-        b Redlands, Loma Linda, Yucaipa, Highland, Adelanto,&nbsp;
+        b Redlands, Loma Linda, Yucaipa, Highland, Adelanto, Hesperia,&nbsp;
         | and&nbsp;
         b Victorville.
 
