redesign semi-complete

--- a/app/assets/stylesheets/admin.sass
+++ b/app/assets/stylesheets/admin.sass
@@ -3,3 +3,8 @@
 html#bg-app,
 body#gimmecar-app
   background: $background-color-app
+
+#gimmecar-app
+  display: flex
+  flex-direction: column
+  height: 100vh
