--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -102,6 +102,11 @@ textarea:focus,
 button:focus
   outline: none
 
+.gimmecar-app-container
+  max-width: 48rem
+  margin: 0 auto
+  padding: 0 $padding-default
+
 .container
   width: 100%
   min-width: $min-width
