--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -40,8 +40,9 @@ $background-color-blue: lighten($blue, 44%)
 $background-color-page: $white
 $background-color-footer: #0d051a
 $background-color-panel: $white
-$background-color-app: #f9f9fc
-$background-color-header: #f5f5f5
+// $background-color-app: #f9f9fc
+$background-color-app: $white
+$background-color-header: #f9f9fc
 $background-color-input: $white
 $background-color-input-disabled: $background-color-app
 $background-color-input-contrast: #f7f8f9
