--- a/app/frontend/styles/components/panels/details.styl
+++ b/app/frontend/styles/components/panels/details.styl
@@ -4,6 +4,7 @@
 
 .panel-main-details,
 .panel-details-link
+  margin: 0 0 $margin-default
   border-bottom: 1px solid $border-color-light
 
   dt,
@@ -20,10 +21,16 @@
     color: $black
 
 .panel-main-details
-  margin: 0
   float: left
   width: 100%
-  background: $white-dark
+
+  .panel-main-detail
+    display: flex
+    flex-direction: row
+
+    dt
+      float: left
+      width: 100%
 
   dt,
   dd
@@ -32,18 +39,22 @@
 
   dt
     width: 35%
-    padding-left: $padding-default
+    padding-left: $padding-sm
     padding-right: $padding-sm
+
     color: $black-light
+    text-align: left
 
   dd
     width: 65%
-    padding-right: $padding-default
+    padding-right: $padding-sm
     padding-left: $padding-sm
+
     color: $black
+    text-align: right
 
   span.description
-    font-size: 0.75rem
+    font-size: $font-size-default - 0.0625rem
     color: $silver
 
 .panel-details-link
