--- a/app/frontend/styles/components/panels/form.styl
+++ b/app/frontend/styles/components/panels/form.styl
@@ -14,25 +14,13 @@
 .panel-form-padding
   padding: 0 $padding-default
 
-.panel-form-header.panel-form-header-first
-  margin-top: 0
-
-  &:before
-    content: ' '
-    height: 0.125rem
-    width: 3rem
-    display: block
-    margin-bottom: $padding-default
-
-    background: $purple
-
 .panel-form-header
   width: 100%
   float: left
   margin: $padding-default 0 $padding-sm
   padding-left: $input-margin-x
   padding-right: $input-margin-x
-  font-weight: 400
+  font-weight: 600
 
 .panel-form-popup-header
   width: 100%
@@ -44,7 +32,7 @@
 
 .panel-popup-form-content,
 .panel-popup-form-footer
-  background: $background-color-app
+  background: $background-color-header
 
 .panel-popup-form-content
   padding-top: $padding-sm
