redesign, few bugs remain, overall good

--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -96,6 +96,10 @@ pre
   margin-bottom: 0
   font: 0.75rem $mono-font
 
+// Address
+address
+  font-style: normal
+
 input:focus,
 select:focus,
 textarea:focus,
