--- a/app/assets/stylesheets/public/landing.sass
+++ b/app/assets/stylesheets/public/landing.sass
@@ -12,7 +12,7 @@
   padding: $margin-ex-lg 0
   margin: 0 auto
 
-  background: $background-color-app
+  background: $background-color-header
   border-top: 1px solid $border-color-light
   border-bottom: 1px solid $border-color-light
 
