--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -96,11 +96,20 @@ pre
   margin-bottom: 0
   font: 0.75rem $mono-font
 
+// Address
+address
+  font-style: normal
+
 input:focus,
 select:focus,
 textarea:focus,
 button:focus
   outline: none
+
+.gimmecar-app-container
+  max-width: 48rem
+  margin: 0 auto
+  padding: 0 $padding-default
 
 .container
   width: 100%
