Hesperia location added

--- a/app/views/layouts/public.slim
+++ b/app/views/layouts/public.slim
@@ -35,6 +35,11 @@ html
                 dd 11628 Bartlett Ave.
                 dd Adelanto, CA 92301
             dl
+              dt Hesperia, CA - Day & Night Inn
+              address
+                dd 14865 Bear Valley Rd.
+                dd Hesperia, CA 92345
+            dl
               dt Redlands, CA - Super 8
               address
                 dd 1160 Arizona St.
