minor design changes

--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -111,6 +111,11 @@ button:focus
   margin: 0 auto
   padding: 0 $padding-default
 
+.gimmecar-app-container#gimmecar-app-command
+  max-width:  80rem
+  margin: 0 auto
+  padding: 0 $padding-default
+
 .container
   width: 100%
   min-width: $min-width
