--- a/app/frontend/styles/components/panels/form.styl
+++ b/app/frontend/styles/components/panels/form.styl
@@ -32,7 +32,7 @@
 
 .panel-popup-form-content,
 .panel-popup-form-footer
-  background: $background-color-header
+  background: $background-color-contrast
 
 .panel-popup-form-content
   padding-top: $padding-sm
