--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -1,4 +1,5 @@
 @import "global/colors"
+@import "global/type"
 
 .text-danger
   color: $text-color-red
@@ -28,7 +29,7 @@ svg.text-success
 
   small
     display: block
-    font-size: 55%
+    font-size: $font-size-default + 0.125rem
     font-weight: 400
 
 a,
