--- a/app/frontend/styles/components/layout.styl
+++ b/app/frontend/styles/components/layout.styl
@@ -2,6 +2,9 @@
 @import '~Styles/global/layout'
 @import '~Styles/global/type'
 
+header
+  margin-bottom: $margin-default
+
 .logo
   padding-top: $padding-default
   padding-bottom: $padding-default
@@ -31,7 +34,6 @@ nav
 
     a
       float: left
-      padding: 0 0 $padding-sm
 
       color: $black-ex-light
       line-height: 1.875rem - $padding-sm
