--- a/app/frontend/styles/components/panels/form.styl
+++ b/app/frontend/styles/components/panels/form.styl
@@ -17,7 +17,7 @@
 .panel-form-header
   width: 100%
   float: left
-  margin: $padding-default 0 $padding-sm
+  margin: $padding-sm 0
   padding-left: $input-margin-x
   padding-right: $input-margin-x
   font-weight: 600
