--- a/app/frontend/styles/components/panels/details.styl
+++ b/app/frontend/styles/components/panels/details.styl
@@ -4,7 +4,7 @@
 
 .panel-main-details,
 .panel-details-link
-  margin: 0 0 $margin-default
+  margin: 0
   border-bottom: 1px solid $border-color-light
   width: 100%
 
