admin now a single page

--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -38,13 +38,13 @@
   padding: $padding-default 0
 
   h2
-    margin: 0 0 0 $margin-sm
+    margin: 0 0 0 $margin-default
     float: left
     font-size: 1.25rem
     font-weight: 400
 
   .flex-element
-    margin: 0 $margin-sm 0 0
+    margin: 0 $margin-default 0 0
 
   h2,
   .flex-element
