--- a/app/frontend/styles/components/panels/details.styl
+++ b/app/frontend/styles/components/panels/details.styl
@@ -40,16 +40,16 @@
 
   dt
     width: 35%
-    padding-left: $padding-sm
-    padding-right: $padding-sm
+    padding-left: $padding-default
+    padding-right: $padding-default
 
     color: $black-light
     text-align: left
 
   dd
     width: 65%
-    padding-right: $padding-sm
-    padding-left: $padding-sm
+    padding-right: $padding-default
+    padding-left: $padding-default
 
     color: $black
     text-align: right
